--- a/ClinicaDental2/nbproject/project.properties
+++ b/ClinicaDental2/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ClinicaDental2
+application.vendor=nasc_
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,6 +32,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ClinicaDental2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.39.jar=C:\\Users\\oem\\Desktop\\mysql-connector-java-5.1.39.jar
 includes=**
@@ -40,6 +43,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
@@ -57,6 +61,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -65,6 +70,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=ClinicaDental2
 main.class=clinicadental2.ClinicaDental2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
